# statusbar

./: Cargo.toml  README.md  azure-pipelines.yml
.ci/: azure-pipelines-template.yml
formatter/: Cargo.toml
formatter/src/: error.rs  grammar.pest  lib.rs  parser.rs  tests.rs
hooks/: install.bash  install.rs  pre-commit.rs  pre-commit.sh
linux_sensors/: Cargo.toml  build.rs  wrapper.h
linux_sensors/src/: lib.rs
linux_wireless/: Cargo.toml  build.rs  wrapper.h
src/: config.rs  formatter.rs  main.rs  output.rs  parse.rs  statusbar.rs  util.rs  widget.rs
src/output/: awesome.rs  color.rs  i3.rs  mod.rs  terminal.rs
src/statusbar/: mod.rs  status.rs  statusbar.rs  system.rs
src/widget/: battery.rs  cpu_usage.rs  datetime.rs  memory.rs  mod.rs  mpd.rs  net.rs  temp.rs  volume.rs  widget.rs
src/widget/cpu_usage/: linux.rs
src/widget/memory/: linux_sysinfo.rs
src/widget/mpd/: conn.rs  mod.rs
src/widget/net/: linux.rs  linux_wireless.rs  tests.rs  unix.rs
src/widget/temp/: linux.rs
src/widget/volume/: alsa.rs
statusbar-rs/: Cargo.toml
statusbar-rs/hooks/: pre-commit.rs
statusbar-rs/src/: bytes.rs  main.rs
statusbar-rs/src/output/: color.rs  i3.rs  terminal.rs
statusbar-rs/src/widget/: memory.rs  net.rs
statusbar-rs/src/widget/mpd/: conn.rs
statusbar-rs/src/widget/net/: linux.rs  tests.rs
statusbar-rs/src/widget/temp/: linux.rs
