[package]
name = "statusbar-rs"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
failure = "0.1.1"
rayon = "1.0.1"
structopt = "0.2.10"
toml = "0.4.6"
serde = "1.0.66"
serde_derive = "1.0.66"
actix = "0.7.4"
notify-rust = "3.4.2"
nom = "4.0.0"
lazy_static = "1.0.1"
directories = "1.0.1"
env_logger = "0.5.10"
log = "0.4.2"
inotify = "0.6.1"
chrono = {version = "0.4.3", features = ["serde"]}
alsa = "0.2.0"
console = "0.6.2"
nix = "0.11.0"
delegate = "0.1.3"
linux_wireless = { path = "linux_wireless" }
linux_sensors = { path = "linux_sensors" }
formatter = { path = "formatter" }
const-cstr = "0.3.0"

[profile.release]
lto = "fat"
codegen-units = 1
